solucionando error backtracking